Correct heights of images on IE

--- a/app/style/SessionModal.css
+++ b/app/style/SessionModal.css
@@ -42,4 +42,5 @@
 
 .modal-image {
     max-width: 100px;
+    height: auto;
 }
